Update project, best practice